--- a/website/index.html
+++ b/website/index.html
@@ -16,9 +16,28 @@
         <h5>Please come later.</h5>
         <img src="images\favicon\Round Grey.png" alt="Logo">
       </article>
+
+      <div class="separator"></div>
+
+      <article id="lorem-ipsum">
+        <h3>Lorem ipsum : </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec leo interdum ex placerat convallis. Etiam vestibulum justo lorem, in finibus nibh ultrices non. In vitae erat tincidunt, placerat purus quis, tempor erat. Proin efficitur ante eget turpis varius elementum. Fusce id eros elit. Nulla mollis mi et lorem tincidunt, sit amet consequat mauris placerat. Nunc metus lacus, facilisis vitae metus a, interdum scelerisque nisl. Nunc faucibus tristique tempor. Etiam pulvinar enim dolor, eget auctor magna tempus in. Etiam sit amet justo quis risus mattis faucibus eleifend at nibh. Suspendisse interdum eros non congue porttitor. Donec luctus purus eget urna aliquet, a dignissim quam faucibus. Maecenas tempor ante et urna convallis convallis.
+        </p>
+        <p>
+          Nulla a libero mi. Aliquam lacinia ultricies iaculis. Pellentesque in consequat tortor. Vivamus ac augue enim. Sed justo ipsum, scelerisque et consequat et, auctor egestas turpis. Etiam eu ultrices quam. Phasellus ut tincidunt tortor. Nam ac ligula ut turpis aliquam scelerisque. Sed egestas, justo in eleifend scelerisque, tellus arcu mollis ex, ut sagittis nibh risus vitae odio. Pellentesque euismod orci arcu, vel convallis orci dictum sed. Nunc faucibus eget risus feugiat vehicula. In hac habitasse platea dictumst.
+        </p>
+      </article>
+
+
+
     </div>
 
-
+    <footer>
+      <p>Impero91 and Phoboe open project.</p>
+      <a href="https://github.com/Phoboe/Lorem-Ipsum-generator">[Github Project]</a>
+      <p>License free - 2022</p>
+    </footer>
   </body>
 
 </html>
