--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,9 @@
 
     <link rel="icon" type="image/png" href="images\favicon\Round Grey.png">
     <link rel="stylesheet" href="stylesheet.css">
+
+    <meta http-equiv="refresh" content="5; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">
+
   </head>
 
   <body>
