--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
 
       <article id="lorem-ipsum">
         <h3>Lorem ipsum : </h3>
-        <a class="rickroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Générer le Lorem ipsum</a>
+        <a class="rickroll" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Générer le Lorem ipsum !</a>
         <p>Lorem ipsum dolor sit amet...</p>
         <!-- <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec leo interdum ex placerat convallis. Etiam vestibulum justo lorem, in finibus nibh ultrices non. In vitae erat tincidunt, placerat purus quis, tempor erat. Proin efficitur ante eget turpis varius elementum. Fusce id eros elit. Nulla mollis mi et lorem tincidunt, sit amet consequat mauris placerat. Nunc metus lacus, facilisis vitae metus a, interdum scelerisque nisl. Nunc faucibus tristique tempor. Etiam pulvinar enim dolor, eget auctor magna tempus in. Etiam sit amet justo quis risus mattis faucibus eleifend at nibh. Suspendisse interdum eros non congue porttitor. Donec luctus purus eget urna aliquet, a dignissim quam faucibus. Maecenas tempor ante et urna convallis convallis.
