Count word probability complete

--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blank</title>
+    <title>Lorem Ipsum generator</title>
 
     <link rel="icon" type="image/png" href="images\favicon\Round Grey.png">
     <link rel="stylesheet" href="stylesheet.css">
